--- a/client/src/styles/ChatRoom-styles/Messages.module.css
+++ b/client/src/styles/ChatRoom-styles/Messages.module.css
@@ -146,7 +146,8 @@
   .messages {
     height: 75vh;
     padding-right: 24px;
-    margin-top: 16px;
+    margin-top: 0px;
+    margin-bottom: 40px;
     gap: 18px;
   }
   .messages::-webkit-scrollbar {
