--- a/client/src/styles/ImageModal.module.css
+++ b/client/src/styles/ImageModal.module.css
@@ -1,5 +1,5 @@
 .imageModal {
-  max-width: 400px;
+  width: 400px;
   height: fit-content;
   top: 15%;
   left: 35%;
