--- a/client/src/styles/Navbar.module.css
+++ b/client/src/styles/Navbar.module.css
@@ -2,6 +2,8 @@
   width: 100%;
   background-color: var(--clr-white);
   box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.25);
+  position: fixed;
+  top: 0;
 }
 
 .navbar__inner {
