--- a/client/src/styles/Profile-styles/Profile.module.css
+++ b/client/src/styles/Profile-styles/Profile.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
 
   height: 83vh;
-  padding: 2rem 2rem 0;
+  padding: 8rem 2rem 0;
 }
 
 .Profile__cta button {
@@ -44,14 +44,14 @@
 /* media queries for other small screens */
 @media screen and (min-width: 580px) {
   .Profile {
-    padding: 2rem 8rem;
+    padding: 8rem 8rem;
   }
 }
 /* media queries for tablets */
 @media screen and (min-width: 768px) {
   /* styling for tablets or ipads */
   .Profile {
-    padding: 3rem 8rem 0;
+    padding: 9rem 8rem 0;
   }
 }
 
@@ -60,7 +60,7 @@
   /* styling for larger screens */
   .Profile {
     height: 100vh;
-    padding: 4rem 13.5rem 2rem;
+    padding: 10rem 13.5rem 2rem;
   }
 
   .Profile__heading {
